# pavillon-scraper

./: Cargo.toml  todo.md
src/: domain.rs  input.rs  main.rs  pdf_parser.rs  slack.rs
