[package]
name = "pavillon-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
slack-morphism = { version = "2.2", features = ["hyper", "axum"] }
pdf = "0.9.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.0.0", features = ["full"] }

scraper = "0.19.0"
tempfile = "3.10.1"
