[package]
name = "pavillon-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
slack-morphism = { version = "2.3", features = ["hyper"] }
hyper-rustls = { version = "0.26", default-features = false }
hyper-util = { version = "0.1", default-features = false }
reqwest = { version = "0.12.4", features = ["stream"] }
tokio = { version = "1.0.0", features = ["full"] }
scraper = "0.19.0"
tempfile = "3.10.1"
futures = "0.3.30"
pdf-extract = "0.7.7"
regex = "1.10.4"
